--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <li><i class="fas fa-phone"></i> Phone: +96567077369</li>
       <li><i class="fab fa-facebook"></i> Facebook: <a href="https://facebook.com/yourprofile" target="_blank">facebook.com/yourprofile</a></li>
       <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></li>
-      <li class="tiktok"><i class="fab fa-tiktok"></i> TikTok: <a href="https://www.tiktok.com/@shayanor" target="_blank">@shayanor</a></li>
+      <li class="tiktok"><i class="fab fa-tiktok"></i> TikTok: <a href="https://vm.tiktok.com/@shayanor" target="_blank">@shayanor</a></li>
 
 
     </ul>
