--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     <p>If you'd like to get in touch with me, feel free to use the following contact details:</p>
 
     <ul>
-      <li><i class="fas fa-envelope"></i> Email: <a href="mailto:arimasramo88@yahoo.com">arimasramo88@yahoo.com</a></li>
-      <li><i class="fas fa-phone"></i> Phone: +965</li>
-      <li><i class="fab fa-facebook"></i> Facebook: <a href="https://facebook.com/yourprofile" target="_blank">facebook.com/yourprofile</a></li>
+      
+      <li><i class="fas fa-phone"></i> Phone: +96567077369</li>
+      <li><i class="fas fa-envelope"></i> Email: <a href="mailto:arimasramo88@yahoo.com">samiraramo815@gmail.com</a></li>
       <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></li>
-      <li class="tiktok"><i class="fab fa-tiktok"></i> TikTok: <a href="https://tiktok.com/@shayanor" target="_blank">Visit my TikTok</a>
+      <li class="tiktok"><i class="fab fa-tiktok"></i> TikTok: <a href="https://www.tiktok.com/@shayanor" target="_blank">Visit my TikTok</a>
         </a></li>
 
 
