--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <li><i class="fas fa-phone"></i> Phone: +96567077369</li>
       <li><i class="fas fa-envelope"></i> Email: <a href="mailto:arimasramo88@yahoo.com">samiraramo815@gmail.com</a></li>
       <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></li>
-      <li class="tiktok"><i class="fab fa-tiktok"></i> TikTok: <a href="https://www.tiktok.com/@shayanor" target="_blank">Visit my TikTok</a>
+      <li class="tiktok"><i class="fab fa-tiktok"></i> TikTok: <a href="https://www.tiktok.com/@shayanor" target="_blank" rel="noopener noreferrer">Visit my TikTok</a>
         </a></li>
 
 
